# rcast

./: .gitignore  Cargo.toml  README.md  build.rs
.github/PULL_REQUEST_TEMPLATE/: feature_bug.md  release.md
.github/workflows/: ci.yml  release.yml
assets/: MANIFEST.md
assets/icons/: icon.icns
doc/: help.html  settings.html
doc/rust_out/: all.html  index.html
docs/: CONTRIBUTING.md  RELEASING.md
src/: application.rs  audio_cache.rs  audio_downloader.rs  audio_player.rs  chapters.rs  commands.rs  database.rs  download_manager.rs  errors.rs  events.rs  hotkeys.rs  image_cache.rs  main.rs  notifier.rs  orchestrator.rs  rss_sync.rs  state.rs  tray.rs  trim_silence.rs  types.rs
src/adapters/: mod.rs  rfd_file_picker.rs  rfd_folder_picker.rs
src/components/: add_podcast_modal.rs  media_controls.rs  menu.rs  mod.rs  notes_panel.rs  podcast_card.rs  toast.rs
src/db/: mod.rs  models.rs
src/design/: components.rs  mod.rs  palette.rs  spacing.rs  tokens.rs  typography.rs  visuals.rs
src/migrations/: mod.rs
src/migrations/versions/: add_download_tracking.rs  add_episode_chapters_url.rs  add_episode_listen_time.rs  add_episode_position.rs  add_episode_unique_index.rs  add_podcast_last_synced_at.rs  add_podcast_preferences.rs  create_bookmarks_table.rs  initial_migration_02082026.rs  mod.rs
src/pages/: home.rs  mod.rs  podcast_detail.rs  settings.rs
src/ports/: file_picker.rs  folder_picker.rs  mod.rs
src/utils/: string_utils.rs
