[package]
name = "rcast"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
egui-phosphor = "0.11"
rss = "2.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
chrono = "0.4"
image = "0.25"
rodio = "0.20"
md5 = "0.7"
egui_alignments = "0.3.7"
url = "2.5.8"