[package]
name = "rcast"
version = "0.1.1"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
egui-phosphor = "0.11"
rss = "2.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
chrono = "0.4"
image = "0.25"
rodio = "0.22.1"
md5 = "0.7"
egui_alignments = "0.3.7"
url = "2.5.8"
dirs = "6.0.0"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
bytes = "1.11.1"
anyhow = "1"
quick-xml = { version = "0.37", features = ["serialize"] }