[package]
name = "rcast"
version = "0.2.1"
edition = "2024"
description = "A local-first, privacy-focused podcast client"
homepage = "https://github.com/nickmorell/rcast"

[package.metadata.bundle]
name = "RCast"
identifier = "com.nickmorell.rcast"
version = "0.2.1"
copyright = "Copyright (c) 2026 Nick Morell"
category = "Music"
short_description = "A local-first, privacy-focused podcast client"
long_description = "RCast is a desktop podcast client built around a simple belief: your listening habits are your own business. No accounts, no algorithms, no cloud."
osx_minimum_system_version = "11.0"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
egui-phosphor = "0.11"
rss = "2.0"
reqwest = { version = "0.13", features = ["json", "blocking"] }
chrono = "0.4"
image = "0.25"
rodio = "0.22.1"
md5 = "0.7"
egui_alignments = "0.3.7"
url = "2.5.8"
dirs = "6.0.0"
rfd = "0.17.2"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros", "time"] }
bytes = "1.11.1"
anyhow = "1"
quick-xml = { version = "0.37", features = ["serialize"] }